test/testdata/nil/invalid_property_assignment_error.lox
nil.y = 1; // error: property assignment is not valid for 'nil' value
